# amazon_games_server_monitor

./: .env.example  .gitignore  Dockerfile  HISTORY.rst  README.md  README.rst  deploy.cmd  pyproject.toml  requirements.txt
new_world_server_monitor/: Discord.py  __init__.py  new_world_server_monitor.py  requirements.txt
source/: __main__.py  discord.py  env.py  server_monitor.py
